# gemini_hackathon

./: .gitignore  README.md
agentapp/: README.md  pyproject.toml  report.md
agentapp/src/agentapp/: crew.py  main.py
agentapp/src/agentapp/config/: agents.yaml  tasks.yaml
agentapp/src/agentapp/tools/: __init__.py  file_creator_tool.py
frontend/: .gitignore  index.html  package-lock.json  package.json  sync-server.js  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx  mockBackend.js  rootDoc.ts
frontend/src/components/: App.tsx  TaskList.tsx
frontend/src/components/IDE/: AgentsPanel.css  AgentsPanel.jsx  CodeEditor.css  CodeEditor.jsx  FileExplorer.css  FileExplorer.jsx  IDE.css  IDE.jsx  Terminal.css  Terminal.jsx
frontend/src/pages/: FirstPage.tsx  SecondPage.tsx
ide_backend/: README.md  app.py  file_manager.py  terminal_manager.py
