[project]
name = "agentapp"
version = "0.1.0"
description = "agentApp using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.4.0",
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
]

[project.scripts]
agentapp = "agentapp.main:run"
run_crew = "agentapp.main:run"
train = "agentapp.main:train"
replay = "agentapp.main:replay"
test = "agentapp.main:test"
run_with_trigger = "agentapp.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
